--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -216,6 +216,11 @@
         .buttons-csv {
             cursor: pointer;
         }
+
+        .visFooterBox {
+            max-height: 250px;
+            overflow-y: scroll;
+        }
     </style>
 
 
