--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -486,7 +486,7 @@
                         <!-- FOOTER BUSINESS -->
                         <div class="row mb-2">
                             <div class="col-md-6 col-sm-12 h-100">
-                                <div class="">
+                                <div class="asidebox border-top pb-0 mb-0">
                                     <span class="home-label font-weight-bold"><i class="fas fa-info-circle mr-1"></i>How calculated</span>
                                 </div>
                                 <div class="asidebox visFooterBox">
@@ -498,7 +498,7 @@
                             </div>
                         
                             <div class="col-md-6 col-sm-12 h-100">
-                                <div class="">
+                                <div class="asidebox border-top  pb-0 mb-0">
                                     <span class="home-label font-weight-bold"><i class="fas fa-database mr-1"></i>Data sources</span>
                                 </div>
                                 <div class="asidebox visFooterBox">
@@ -551,6 +551,7 @@
 
 
 
+        </div>
     </div>
 
 
