update links from home

--- a/themes/dohmh/layouts/index.html
+++ b/themes/dohmh/layouts/index.html
@@ -17,17 +17,19 @@
               <div class="col-md-6 px-20">
                 <ul class="list-unstyled font-weight-bold">
                   <li class="link-w-underline px-0"><a href={{ relURL "key-topics/airquality" }}>Air quality</a></li>
+                  <li class="link-w-underline px-0"><a href={{ relURL "key-topics/childhealth" }}>Child health</a></li>
                   <li class="link-w-underline px-0"><a href={{ relURL "key-topics/climatehealth" }}>Climate</a></li>
-                  <li class="link-w-underline px-0"><a href={{ relURL "key-topics/social" }}>Inequality</a></li>
-                  <li class="link-w-underline px-0"><a href={{ relURL "key-topics/pests" }}>Pests</a></li>
+                  <li class="link-w-underline px-0"><a href={{ relURL "key-topics/foodanddrink" }}>Food and drink</a></li>
+                  <li class="link-w-underline px-0"><a href={{ relURL "key-topics/healthoutcomes" }}>Health outcomes</a></li>
                 </ul>
               </div>
               <div class="col-md-6 px-2 px-20">
                 <ul class="list-unstyled font-weight-bold">
-                  <li class="link-w-underline px-0"><a href={{ relURL "key-topics/transportation" }}>Public space</a></li>
                   <li class="link-w-underline px-0"><a href={{ relURL "key-topics/housing" }}>Housing</a></li>
-                  <li class="link-w-underline px-0"><a href={{ relURL "key-topics/childhealth" }}>Child health</a></li>
-                  <li class="link-w-underline px-0"><a href={{ relURL "key-topics/foodanddrink" }}>Food and drink</a></li>
+                  <li class="link-w-underline px-0"><a href={{ relURL "key-topics/social" }}>Inequality</a></li>
+                  <li class="link-w-underline px-0"><a href={{ relURL "key-topics/injury-and-violence" }}>Injury and violence</a></li>
+                  <li class="link-w-underline px-0"><a href={{ relURL "key-topics/pests" }}>Pests</a></li>
+                  <li class="link-w-underline px-0"><a href={{ relURL "key-topics/transportation" }}>Public space</a></li>
                 </ul>
               </div>
               <div class="d-flex mt-3 w-100 mb-4 mb-md-0 pl-2">
