tweak labels and order

--- a/themes/dohmh/layouts/data-explorer/section.html
+++ b/themes/dohmh/layouts/data-explorer/section.html
@@ -55,7 +55,7 @@
 
         <div class="row mt-2">
             <div class="col-12">
-                <p class="text-info font-weight-bold">Or, browse by category and topic:</p>
+                <p class="text-info font-weight-bold">Browse:</p>
                 {{ partial "de-chooser-accordion.html" (dict "layout" "double" "context" .)  }}
 
             </div>
