--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -231,3 +231,11 @@ $color-data-explorer: #0A408A;
   background-repeat: no-repeat;
   background-position: 0 20px;
 }
+
+.accordion-group a[data-toggle="collapse"][aria-expanded="false"]:after {
+  content: "\002B";
+}
+
+.accordion-group a[data-toggle="collapse"][aria-expanded="true"]:after {
+  content: "\2014";
+}
