--- a/themes/dohmh/layouts/data-stories/single.html
+++ b/themes/dohmh/layouts/data-stories/single.html
@@ -1,19 +1,5 @@
 {{- define "main" -}}
 
-<div class="container-fluid px-0">
-
-    {{ $src := .Resources.GetMatch .Params.image }}
-    {{ $image := $src.Resize "1920x"}}
-    <div id="datastoryheader" style="background-image: URL({{ $image.RelPermalink }}); background-position: 50% 25%">
-
-        <div class="medium my-auto">
-            <h1 class="titleheader py-2 px-4">
-                {{ .Title }}
-            </h1>
-        </div>
-    </div>
-</div>
-
 <article class="container-fluid" id="skip-header-target">
 
     <div class="row">
@@ -25,7 +11,7 @@
 
         <div class="row mt-2">
             <div class="col-12">
-                <nav aria-label="breadcrumb" class="border-top">
+                <nav aria-label="breadcrumb">
                     <ul class="breadcrumb">
                         <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
                         <li class="breadcrumb-item"><a href={{ relURL "data-stories" }}>Data Stories</a></li>
@@ -49,6 +35,15 @@
         {{- end -}}
 
         <div class="narrow my-2">
+            <h1 class="h2 data-stories mb-3"><i class="fas fa-passport" aria-hidden="true" style="margin-right: 10px"></i>{{ .Title }}</h1>
+            <div class="container-fluid px-0">
+
+                {{ $src := .Resources.GetMatch .Params.image }}
+                {{ with $src }}
+                {{ $image := .Resize "1200x" }}
+                    <img class="block mb-3" src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}" alt="">
+                {{ end }}
+            </div>
             {{- .Content -}}
         </div>
 
